fix flexbox issues with elements being too big on larger monitors
certain elements didn't have a set width so I added one so they
wouldn't stretch the entire length of the page in some cases.

--- a/style.css
+++ b/style.css
@@ -76,11 +76,11 @@ body {
 }
 
 .himg {
-    flex: 1;
     background-color:#e5e7eb6b;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 620px;
 }
 
 /* Card Info Section */
@@ -133,6 +133,17 @@ body {
     background-color: #E5E7EB;
     padding: 80px 300px;
     font-size: 36px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote .quote-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 820px;
 }
 
 .quote .text {
@@ -143,7 +154,7 @@ body {
 .thor {
     font-size: 24px;
     font-weight: 600;
-    text-align: right;
+    align-self: flex-end;
 }
 
 /* Call to Action */
@@ -158,7 +169,6 @@ body {
 }
 
 .call {
-    flex: 1;
     background-color: #3882F6;
     color: #F9FAF8;
     padding: 20px 150px;
@@ -166,6 +176,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 1120px;
 }
 
 .call h1 {
